--- a/index.html
+++ b/index.html
@@ -3,56 +3,101 @@
 	<head>
 		<meta charset="utf-8">
 		<title>下载</title>
+		<!-- 引入样式 -->
+		<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+	
 		<style type="text/css">
-		      td {
-		        line-height: 50px;
-		        font-size: 40px;
-		      }    
-			  //蒙版样式
-			  #Mask {
-			    position: absolute;
-			    top: 0;
-			    left: 0;
-			    display: none;
-			    background-size: cover;
-			    width: 100%;
-			    height: 100%;
-			    z-index: 1000;
-			  }
-			  .model-content {
-			    width: 100%;
-			    height: 100%;
-			    text-align: center;
-			    background: #ffffff;
-			    border-radius: 6px;
-			    margin: 100px auto;
-			    line-height: 30px;
-			    z-index: 10001;
-			  }
+			body {
+				padding-top: 200px;
+				background-image: url('./img.png');
+				background-size: cover;
+			}
+			.title {
+				margin-bottom: 20px;
+			}
+			.title, td {
+				line-height: 50px;
+				font-size: 40px;
+			}    
+			a {
+				text-decoration: none;
+			}
+			#Mask {
+				position: absolute;
+				top: 0;
+				left: 0;
+				display: none;
+				background-size: cover;
+				width: 100%;
+				height: 100%;
+				z-index: 1000;
+			}
+			.model-content {
+				width: 100%;
+				height: 100%;
+				text-align: center;
+				background: #ffffff;
+				border-radius: 6px;
+				margin: 100px auto;
+				line-height: 30px;
+				z-index: 10001;
+			}
 		</style>
 	</head>
-	<body style="background-color: #4DFFFF;padding-top: 400px">
-		<div id="main" align="center" style="width: 100%;">
-			<table>
-				<tr>
-					<td valign="middle">
-						<a href="#" rel="external nofollow" id="JdownApp">安卓下载</a>
-					</td>
-				</tr>
-				<tr>
-					<td valign="middle">
-						<a href="#" rel="external nofollow" id="JdownApp2" class="btn-warn">苹果下载</a>
-					</td>
-				</tr>
-			</table>     
-		</div>
-		<!-- 引入遮蔽层 -->
-		<div id="Mask" style="display:none;">
-			<div>点击右上角的 ···</div>
-			<div>选择在浏览器中打开</div>
+	<body>
+		<div id="app">
+			<div id="main" align="center" style="width: 100%;">
+				<div class="title">矫正对象APP下载</div>
+				<table>
+					<tr>
+						<td valign="middle">
+							<a :href="apkURL" rel="external nofollow" id="JdownApp2" class="btn-warn">安卓下载</a>
+						</td>
+					</tr>
+					<tr>
+						<td valign="middle">
+							<a href="#" rel="external nofollow" id="JdownApp2" class="btn-warn">苹果下载</a>
+						</td>
+					</tr>
+				</table>     
+			</div>
+			<!-- 引入遮蔽层 -->
+			<div id="Mask" style="display:none;">
+				<div>点击右上角的 ···</div>
+				<div>选择在浏览器中打开</div>
+			</div>
 		</div>
 	</body>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<!-- 引入组件库 -->
+	<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 	<script type="text/javascript">
+		const app = new Vue({
+			el:'#app',
+			data() {
+				return {
+					apkURL: null
+				}
+			},
+			mounted() {
+				this.getURL()
+			},
+			methods: {
+				getURL() {
+					console.log('sd');
+					// let url = 'http://175.178.205.132:8080/user/version'
+					let url1 = 'http://43.139.124.241'
+					axios.get('http://43.139.124.241:8080/user/version').then(res => {
+						console.log(res)
+						this.apkURL = url1 + res.data.data.apkUrl
+						console.log(this.apkURL)
+					}).catch(err => {
+						console.log(err);
+					})
+				}
+			}
+		})
 	  //判断是否在微信中打开
 	  var ua = navigator.userAgent;
 	  var isWeixin = !!/MicroMessenger/i.test(ua);
