--- a/index.html
+++ b/index.html
@@ -14,16 +14,27 @@
 				background-repeat: no-repeat;
 				background-attachment: fixed;
 			}
-			.title {
-				margin-bottom: 100px;
-				color: #ffffff;
-			}
 			.title, td {
 				line-height: 50px;
 				font-size: 40px;
-			}    
+			} 
+			.title {
+				margin-top: 20px;
+				margin-bottom: 100px;
+				color: #ffffff;
+				font-size: 50px;
+				font-family: '';
+			}
+			.icon1 {
+				width: 200px;
+				height: 200px;
+			}  
 			a {
 				text-decoration: none;
+			}
+			a img {
+				width: 350px;
+				height: 91px;
 			}
 			#Mask {
 				position: absolute;
@@ -50,7 +61,7 @@
 	<body>
 		<div id="app">
 			<div id="main" align="center" style="width: 100%;">
-				<img src="./icon.png" alt="">
+				<img src="./icon.png" class="icon1" alt="">
 				<div class="title">智慧监管矫正对象APP</div>
 				<table>
 					<tr>
