--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 				font-size: 40px;
 			} 
 			.title {
-				margin-top: 20px;
+				margin-top: 10px;
 				margin-bottom: 100px;
 				color: #ffffff;
-				font-size: 50px;
-				font-family: '';
+				font-size: 48px;
+				font-weight: bold;
+				font-family: 'SimSun', 'Microsoft YaHei';
 			}
 			.icon1 {
 				width: 200px;
@@ -35,6 +36,7 @@
 			a img {
 				width: 350px;
 				height: 91px;
+				box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
 			}
 			#Mask {
 				position: absolute;
