--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
 			}
 			#Mask {
 				position: absolute;
-				top: 0;
-				left: 0;
-				display: none;
-				background-size: cover;
+				top: 35%;
+				left: 20%;
 				width: 100%;
 				height: 100%;
 				z-index: 1000;
+				display: none;
+				color: #FF4500;
+			}
+			#Mask div {
+				font-size: 72px;
+				font-weight: bolder;
+				font-family: 'SimSun';
 			}
 			.model-content {
 				width: 100%;
@@ -83,7 +88,7 @@
 				</table>     
 			</div>
 			<!-- 引入遮蔽层 -->
-			<div id="Mask" style="display:none;">
+			<div id="Mask" style="display:block;">
 				<div>点击右上角的 ···</div>
 				<div>选择在浏览器中打开</div>
 			</div>
