--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				</table>     
 			</div>
 			<!-- 引入遮蔽层 -->
-			<div id="Mask" style="display:block;">
+			<div id="Mask" style="display:none;">
 				<div>点击右上角的 ···</div>
 				<div>选择在浏览器中打开</div>
 			</div>
