--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
 			}
 			#Mask {
 				position: absolute;
-				top: 35%;
-				left: 20%;
+				top: 0;
+				left: 0;
 				width: 100%;
 				height: 100%;
 				z-index: 1000;
+				background-image: url('./backg.jpg');
+				background-repeat: no-repeat;
+				background-size: 100% 100%;
 				display: none;
 				color: #FF4500;
 			}
@@ -88,9 +91,7 @@
 				</table>     
 			</div>
 			<!-- 引入遮蔽层 -->
-			<div id="Mask" style="display:none;">
-				<div>点击右上角的 ···</div>
-				<div>选择在浏览器中打开</div>
+			<div id="Mask">
 			</div>
 		</div>
 	</body>
