--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
 	
 		<style type="text/css">
 			body {
-				padding-top: 200px;
+				height: 1134px;
 				background-image: url('./img5.jpeg');
-				background-size: cover;
+				background-size: 100% 100%;
 				background-repeat: no-repeat;
-				background-attachment: fixed;
 			}
 			.title {
 				margin-top: 10px;
 				margin-bottom: 30px;
 				/* color: #ffffff; */
 				color: #FFD18F;
-				font-size: 52px;
-				font-weight: bold;
+				font-size: 56px;
+				font-weight: bolder;
 				font-family: 'SimSun', 'Microsoft YaHei';
 			}
 			.icon1 {
-				width: 200px;
-				height: 200px;
+				width: 360px;
+				height: 360px;
 				margin-bottom: 10px;
 			}
 			.DL {
@@ -79,11 +78,6 @@
 					<a :href="apkURL" rel="external nofollow" id="JdownApp2" class="btn-warn">
 						<img src="./download.jpg" alt="">
 					</a>
-				</div>
-				<div class="DL">
-					<a href="#" rel="external nofollow" id="JdownApp2" class="btn-warn">
-						<img src="./apple.jpg" alt="">
-					</a> 
 				</div>
 			</div>
 			<!-- 引入遮蔽层 -->
