--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
 				background-image: url('./img5.jpeg');
 				background-size: 100% 100%;
 				background-repeat: no-repeat;
+				background-attachment: fixed;
 			}
 			.title {
 				margin-top: 10px;
 				margin-bottom: 30px;
 				/* color: #ffffff; */
 				color: #FFD18F;
-				font-size: 56px;
+				font-size: 40px;
 				font-weight: bolder;
 				font-family: 'SimSun', 'Microsoft YaHei';
 			}
 			.icon1 {
 				width: 360px;
 				height: 360px;
+				padding-top: 30px;
 				margin-bottom: 10px;
 			}
 			.DL {
