--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	
 		<style type="text/css">
 			body {
-				height: 1134px;
 				background-image: url('./img5.jpeg');
-				background-size: 100% 100%;
 				background-repeat: no-repeat;
+				background-size: 100% 100%;
+				background-attachment: fixed;
 			}
 			.title {
 				margin-top: 10px;
@@ -23,8 +23,8 @@
 				font-family: 'SimSun', 'Microsoft YaHei';
 			}
 			.icon1 {
-				width: 360px;
-				height: 360px;
+				width: 300px;
+				height: 300px;
 				padding-top: 30px;
 				margin-bottom: 10px;
 			}
@@ -40,9 +40,14 @@
 				box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
 			}
 			.version {
-				font-size: 24px;
+				font-size: 12px;
 				color: #ffffff;
 				font-family: 'SimSun', 'Microsoft YaHei';
+			}
+			.foot {
+				width: auto;
+				height: 150px;
+				background-color: black;
 			}
 			#Mask {
 				position: absolute;
