--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 		<style type="text/css">
 			body {
 				background-image: url('./img5.jpeg');
+				background-position: center center;
 				background-repeat: no-repeat;
-				background-size: 100% 100%;
 				background-attachment: fixed;
+				background-size: cover;
 			}
 			.title {
 				margin-top: 10px;
@@ -27,9 +28,6 @@
 				height: 300px;
 				padding-top: 30px;
 				margin-bottom: 10px;
-			}
-			.DL {
-				margin-bottom: 30px;
 			}  
 			a {
 				text-decoration: none;
