--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 		<style type="text/css">
 			body {
 				background-image: url('./img5.jpeg');
-				background-position: center center;
 				background-repeat: no-repeat;
-				background-attachment: fixed;
-				background-size: cover;
+				height:100%;
+				width:100%;
+				overflow: hidden;
+				background-size:cover;
 			}
 			.title {
 				margin-top: 10px;
