--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 	
 		<style type="text/css">
 			body {
+				position:fixed;
+				top: 0;
+				left: 0;
+				width:100%;
+				height:100%;
+				min-width: 1000px;
+				z-index:-10;
+				zoom: 1;
 				background-image: url('./img5.jpeg');
 				background-repeat: no-repeat;
-				height:100%;
-				width:100%;
-				overflow: hidden;
 				background-size:cover;
+				-webkit-background-size: cover;
+				-o-background-size: cover;
+				background-position: center 0;
 			}
 			.title {
 				margin-top: 10px;
