--- a/index.html
+++ b/index.html
@@ -19,9 +19,28 @@
 				background-image: url('./img5.jpeg');
 				background-repeat: no-repeat;
 				background-size:cover;
+				background-attachment: fixed;
 				-webkit-background-size: cover;
 				-o-background-size: cover;
 				background-position: center 0;
+			}
+			/* 移动端响应*/
+			@media screen and (max-width:767px){
+			body{background-position: -99999px -99999px;}
+				body:before {
+						content: ""; 
+						background-image: inherit; 
+						position: fixed; 
+						top: 0; 
+						left: 0; 
+						height: 100vh; 
+						width: 100%; 
+						-webkit-background-size: cover !important; 
+						-moz-background-size: cover !important; 
+						-o-background-size: cover; 
+						background-size: cover !important;
+						z-index: -1;
+				}
 			}
 			.title {
 				margin-top: 10px;
@@ -47,7 +66,8 @@
 				box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
 			}
 			.version {
-				font-size: 12px;
+				padding-top: 20px;
+				font-size: 24px;
 				color: #ffffff;
 				font-family: 'SimSun', 'Microsoft YaHei';
 			}
