--- a/index.html
+++ b/index.html
@@ -8,39 +8,12 @@
 	
 		<style type="text/css">
 			body {
-				position:fixed;
-				top: 0;
-				left: 0;
-				width:100%;
-				height:100%;
-				min-width: 1000px;
-				z-index:-10;
-				zoom: 1;
+				height: 2134px;
 				background-image: url('./img5.jpeg');
 				background-repeat: no-repeat;
-				background-size:cover;
-				background-attachment: fixed;
-				-webkit-background-size: cover;
-				-o-background-size: cover;
-				background-position: center 0;
-			}
-			/* 移动端响应*/
-			@media screen and (max-width:767px){
-			body{background-position: -99999px -99999px;}
-				body:before {
-						content: ""; 
-						background-image: inherit; 
-						position: fixed; 
-						top: 0; 
-						left: 0; 
-						height: 100vh; 
-						width: 100%; 
-						-webkit-background-size: cover !important; 
-						-moz-background-size: cover !important; 
-						-o-background-size: cover; 
-						background-size: cover !important;
-						z-index: -1;
-				}
+				background-position: center center;
+				background-size: 100% 100%;
+				
 			}
 			.title {
 				margin-top: 10px;
