--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 		<style type="text/css">
 			body {
-				height: 2134px;
+				height: 2100px;
 				background-image: url('./img5.jpeg');
 				background-repeat: no-repeat;
 				background-position: center center;
@@ -27,7 +27,7 @@
 			.icon1 {
 				width: 300px;
 				height: 300px;
-				padding-top: 30px;
+				padding-top: 200px;
 				margin-bottom: 10px;
 			}  
 			a {
@@ -41,7 +41,7 @@
 			.version {
 				padding-top: 20px;
 				font-size: 24px;
-				color: #ffffff;
+				color: #FFD18F;
 				font-family: 'SimSun', 'Microsoft YaHei';
 			}
 			.foot {
@@ -91,7 +91,10 @@
 					</a>
 				</div>
 				<div class="version">
-					版本信息：{{version}}
+					当前版本：{{version}}
+				</div>
+				<div class="version">
+					更新内容：
 				</div>
 			</div>
 			<!-- 引入遮蔽层 -->
